--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,27 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wanderlust</title>
-</head>
+<%-layout("layouts/boilerplate.ejs")-%>
 <body>
+    <div class="row mt-3">
+    <div class="col-8 offset-2">
+    <br><br>
     <h3>Create a New Listing</h3>
     <form method="POST" action="/listings">
-        <input type="text" placeholder="Title" name="listing[title]">
+        <div class="mb-3">
+            <label for="title" class="form-label">Title</label>
+            <input type="text" placeholder="Title" name="listing[title]" class="form-control">
+        </div>
+
+        <div class="mb-3">
+            <label for="description" class="form-label">Description</label>
+            <textarea name="listing[description]" class="form-control"></textarea>
+        </div>
+
+        <div class="mb-3">
+            <label for="image" class="form-label">Image Link</label>
+            <input type="text" placeholder="Image URL/Link" name="listing[image]" class="form-control">
+        </div>
+
+        <div class="row">
+        <div class="mb-3 col-md-4">
+            <label for="price" class="form-label">Price</label>
+            <input type="number" placeholder="Price" name="listing[price]" class="form-control">
+        </div>
+
+        <div class="mb-3 col-md-8">
+            <label for="location" class="form-label">Location</label>
+            <input type="text" placeholder="Location" name="listing[location]" class="form-control">
+        </div>
+        </div>
+
+        <div class="mb-3">
+            <label for="country" class="form-label">Country</label>
+            <input type="text" placeholder="Country" name="listing[country]" class="form-control">
+        </div>
+
+        <button class="btn btn-dark add-btn mt-3">Add</button>
         <br><br>
-        <textarea placeholder="Description" name="listing[description]">
-        </textarea>
-        <br><br>
-        <input type="text" placeholder="Image URL/Link" name="listing[image]">
-        <br><br>
-        <input type="number" placeholder="Price" name="listing[price]">
-        <br><br>
-        <input type="text" placeholder="Location" name="listing[location]">
-        <br><br>
-        <input type="text" placeholder="Country" name="listing[country]">
-        <br><br>
-        <button>Add</button>
     </form>
+    </div>
+    </div>
 </body>
-</html>
