--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,46 +1,55 @@
 <%-layout("layouts/boilerplate.ejs")-%>
+<link rel="stylesheet" href="css/style.css">
 <body>
     <div class="row mt-3">
     <div class="col-8 offset-2">
     <br><br>
     <h3>Edit Listing</h3>
-    <form method="POST" action="/listings/<%=listing._id%>?_method=PUT">
+    <form method="POST" action="/listings/<%=listing._id%>?_method=PUT" novalidate class="needs-validation">
         <div class="mb-3">
             <label for="title" class="form-label">Title</label>
-            <input type="text" value=<%=listing.title%> name="listing[title]" class="form-control">
+            <input type="text" value=<%=listing.title%> name="listing[title]" class="form-control" required>
+            <div class="valid-feedback"> Title looks good!</div>
         </div>
         
         <div class="mb-3">
             <label for="description" class="form-label">Description</label>
-            <textarea name="listing[description]" class="form-control"><%=listing.description%>
+            <textarea name="listing[description]" class="form-control" required><%=listing.description%>
             </textarea>
+            <div class="invalid-feedback"> Description Needed</div>
         </div>
         
         <div class="mb-3">
             <label for="image" class="form-label">Image Link</label>
-            <input type="text" value=<%=listing.image%> name="listing[image]" class="form-control">
+            <input type="text" value=<%=listing.image%> name="listing[image]" class="form-control" required>
+            <div class="invalid-feedback">Please provide valid image link</div>
         </div>
 
 
         <div class="row">
         <div class="mb-3 col-md-4">
             <label for="price" class="form-label">Price</label>
-            <input type="number" value=<%=listing.price%> name="listing[price]" class="form-control">
+            <input type="number" value=<%=listing.price%> name="listing[price]" class="form-control" required>
+            <div class="invalid-feedback">Price should be valid</div>
         </div>
 
         <div class="mb-3 col-md-8">
             <label for="location" class="form-label">Location</label>
-            <input type="text" value=<%=listing.location%> name="listing[location]" class="form-control">
+            <input type="text" value=<%=listing.location%> name="listing[location]" class="form-control" required>
+            <div class="invalid-feedback">Location name should be valid</div>
         </div>
         </div>
 
         <div class="mb-3">
             <label for="country" class="form-label">Country</label>
-            <input type="text" value=<%=listing.country%> name="listing[country]" class=form-control>
+            <input type="text" value=<%=listing.country%> name="listing[country]" class=form-control required>
+            <div class="invalid-feedback">Country name should be valid</div>
         </div>
+
         <button class="btn btn-dark edit-btn mt-3">Edit</button>
         <br><br>
     </form>
     </div>
     </div>
+    <srcipt src="/js/script.js"></srcipt>
 </body>
