--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -4,15 +4,17 @@
     <div class="col-8 offset-2">
     <br><br>
     <h3>Create a New Listing</h3>
-    <form method="POST" action="/listings">
+    <form method="POST" action="/listings" novalidate class="needs-validation">
         <div class="mb-3">
             <label for="title" class="form-label">Title</label>
-            <input type="text" placeholder="Title" name="listing[title]" class="form-control">
+            <input type="text" placeholder="Title" name="listing[title]" class="form-control" required>
+            <div class="valid-feedback"> Title looks good!</div>
         </div>
 
         <div class="mb-3">
             <label for="description" class="form-label">Description</label>
-            <textarea name="listing[description]" class="form-control"></textarea>
+            <textarea name="listing[description]" class="form-control" required></textarea>
+            <div class="invalid-feedback"> Description Invalid</div>
         </div>
 
         <div class="mb-3">
@@ -23,18 +25,21 @@
         <div class="row">
         <div class="mb-3 col-md-4">
             <label for="price" class="form-label">Price</label>
-            <input type="number" placeholder="Price" name="listing[price]" class="form-control">
+            <input placeholder="Price" name="listing[price]" class="form-control" required>
+            <div class="invalid-feedback">Price should be valid</div>
         </div>
 
         <div class="mb-3 col-md-8">
             <label for="location" class="form-label">Location</label>
-            <input type="text" placeholder="Location" name="listing[location]" class="form-control">
+            <input type="text" placeholder="Location" name="listing[location]" class="form-control" required>
+            <div class="invalid-feedback">Location name should be valid</div>
         </div>
         </div>
 
         <div class="mb-3">
             <label for="country" class="form-label">Country</label>
-            <input type="text" placeholder="Country" name="listing[country]" class="form-control">
+            <input type="text" placeholder="Country" name="listing[country]" class="form-control" required>
+            <div class="invalid-feedback">Country name should be valid</div>
         </div>
 
         <button class="btn btn-dark add-btn mt-3">Add</button>
