--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -6,7 +6,7 @@
             <i class="fa-brands fa-linkedin"></i>
         </div>
         <div class="f-brand">
-            <p>&copy; Wanderlust Private Limited</p>
+            <p>&copy; Namo Yatra Private Limited</p>
         </div>
         <div class="f-info-links">
             <a href="/privacy">Privacy</a>
