--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,18 +1,64 @@
 <%-layout("layouts/boilerplate.ejs")-%>
 <body>
-    <h3>Listing Details: </h3>
-    <ul>
-        <li><%=listing.title%></li>
-        <li><%=listing.description%></li>
-        <li>&#8377; <%=listing.price.toLocaleString("en-IN")%></li>
-        <li><%=listing.location%></li>
-        <li><%=listing.country%></li>
-    </ul>
-    <a href="/listings/<%=listing._id%>/edit">Edit Listing</a>
-    <br><br>
-    <form method ="POST" action="/listings/<%=listing._id%>?_method=DELETE">
-        <button>
-            Delete Listing
-        </button>
-    </form>
+    <div class="row mt-3">
+    <div class="col-6 offset-3">
+    <h3><%=listing.title%></h3>
+    <div class="mt-3">
+        <img src="<%=listing.image%>" alt="listing_image" class="listing-image">
+    </div>
+    <div class="mt-3">
+     <p><%=listing.description%><br>
+        &#8377; <%=listing.price.toLocaleString("en-IN")%><br>
+        <%=listing.location%><br>
+        <%=listing.country%>
+    </p>
+    </div>
+    </div>
+
+    <div class="col-6 offset-3" style="display: flex;">
+        <div>
+            <button class="btn edit-btn" style="margin-right: 1rem;">
+                <a href="/listings/<%=listing._id%>/edit" class="edit-link">Edit Listing</a>
+            </button> 
+        </div>
+            <form method ="POST" action="/listings/<%=listing._id%>?_method=DELETE">
+                <button class="btn btn-dark">
+                    Delete Listing
+                </button>
+            </form> 
+    </div>
+
+    <div class="col-6 offset-3 mt-3 mb-3">
+        <hr>
+        <h4>Leave Review</h4>
+        <form action="/listings/<%=listing.id%>/reviews" method="POST" novalidate class="needs-validation">
+            <div class="mt-3">
+                <label for="rating" class="form-label">Rating</label>
+                <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range">
+            </div>
+            <div class="mt-3">
+                <label for="comment" class="form-label">Comment</label>
+                <textarea name="review[comment]" id="comment" col="20" rows="5" class="form-control" required></textarea>
+                <div class="invalid-feedback">Please add some comment for review</div>
+            </div>
+            <button class="btn btn-outline-dark mt-3">Submit</button>
+        </form>
+
+        <hr>
+        <p><b>All Reviews</b></p>
+        <div class="row">
+        <% for(review of listing.reviews) { %>
+        <div class="card col-5 ms-2 mb-3">
+        <div class="card-body">
+            <h5 class="card-title">John Doe</h5>
+            <p class="card-text"><%=review.comment%></p>
+            <p class="card-text"><%=review.rating%> stars</p>
+        </div>
+        <form method="POST" action="/listings/<%=listing._id%>/reviews/<%=review._id%>?_method=DELETE" >
+            <button class="btn btn-sm btn-dark mb-3 mt-2">Delete</button>
+        </form>
+        </div>
+        <% } %>
+        </div>
+    </div>
 </body>
