--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -6,8 +6,9 @@
     <div class="mt-3">
         <img src="<%=listing.image%>" alt="listing_image" class="listing-image">
     </div>
-    <div class="mt-3">
-     <p><%=listing.description%><br>
+    <div class="mt-3 card-body">
+    <p class="card-text">Owned by <i><%=listing.owner.username%></i></p>
+     <p class="card-text"><%=listing.description%><br>
         &#8377; <%=listing.price.toLocaleString("en-IN")%><br>
         <%=listing.location%><br>
         <%=listing.country%>
@@ -15,7 +16,8 @@
     </div>
     </div>
 
-    <div class="col-6 offset-3" style="display: flex;">
+    <% if(currUser && currUser._id.equals(listing.owner._id)){ %>
+    <div class="col-6 offset-3 mt-3" style="display: flex;">
         <div>
             <button class="btn edit-btn" style="margin-right: 1rem;">
                 <a href="/listings/<%=listing._id%>/edit" class="edit-link">Edit Listing</a>
@@ -27,9 +29,11 @@
                 </button>
             </form> 
     </div>
+    <% } %>
 
+    
     <div class="col-6 offset-3 mt-3 mb-3">
-        <hr>
+        <% if(currUser) { %>
         <h4>Leave Review</h4>
         <form action="/listings/<%=listing.id%>/reviews" method="POST" novalidate class="needs-validation">
             <div class="mt-3">
@@ -43,6 +47,7 @@
             </div>
             <button class="btn btn-outline-dark mt-3">Submit</button>
         </form>
+        <% } %>
 
         <hr>
         <p><b>All Reviews</b></p>
@@ -50,7 +55,7 @@
         <% for(review of listing.reviews) { %>
         <div class="card col-5 ms-2 mb-3">
         <div class="card-body">
-            <h5 class="card-title">John Doe</h5>
+            <h5 class="card-title">@<%=review.author.username%></h5>
             <p class="card-text"><%=review.comment%></p>
             <p class="card-text"><%=review.rating%> stars</p>
         </div>
