--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,22 +1,18 @@
 <%-layout("layouts/boilerplate.ejs")-%>
 <div class="row mt-3">
-    <h1 class="col-6 offset-5">SignUp</h1>
+    <h1 class="col-6 offset-5">Login</h1>
     <div class="col-6 offset-3 mt-3">
-        <form action="/signup" method="POST" novalidate class="needs-validation">
+        <form action="/login" method="POST" novalidate class="needs-validation">
             <div class="mb-3">
                 <label for="username" class="form-label">Username</label>
                 <input type="text" placeholder="Username" name="username" id="username" class="form-control" required>
                 <div class="valid-feedback"> Looks good!</div>
             </div>
             <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" placeholder="Email" name="email" id="email" class="form-control" required>
-            </div>
-            <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
                 <input type="password" placeholder="Password" name="password" id="password" class="form-control" required>
             </div>
-            <button class="btn btn-success">Signup</button>
+            <button class="btn btn-success">Login</button>
         </form>
     </div>
 </div>
